# near-escrow

./: .gitignore  Cargo.toml  DESIGN-MSIG.md  MERGED-PLAN.md  MULTI_VERIFIER_DRAFT.md  PLAN.md  README.md  RUNTIME-AUDIT.md  STATE.md  WORKER-GUIDE.md  WORKER-SPEC.md  YIELD-BUG-FINDINGS.md  state-machine.excalidraw
.hermes/plans/: 2025-07-16-prod-hardening.md
agent-msig/: Cargo.toml
agent-msig/src/: lib.rs
minimal-test/: Cargo.toml
minimal-test/src/: lib.rs
nostr/: config.example.json  event_schema.json  post_task.py  relayer.py  requirements.txt  sign_action.py  utils.py  worker.py
scripts/: deploy.sh  e2e_test.py
src/: lib.rs  lib.rs.backup  tests.rs
tests/integration/: Cargo.toml  debug_test.rs  deploy_test.rs  exec_test.rs  flow_b_test.rs  minimal_test.rs  sequence_test.rs  testnet_test.rs  tests.rs  view_test.rs
tests/integration/ft-mock/: Cargo.toml
tests/integration/ft-mock/src/: lib.rs
tests/integration/minimal/: Cargo.toml
tests/integration/minimal/src/: lib.rs
tests/integration/tests/: multi_verifier.rs
tests/integration/verifier-mock/: Cargo.toml
tests/integration/verifier-mock/src/: lib.rs
verifier/: config.example.json  main.py  near_client.py  requirements.txt  scorer.py
verifier-service/: Cargo.toml  verifier.example.toml
verifier-service/src/: config.rs  consensus.rs  main.rs  scorer.rs  submitter.rs
