[package]
name = "near-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.6", features = ["legacy"] }
borsh = "1"
serde_json = "1"

[dev-dependencies]
near-sdk = { version = "5.6", features = ["legacy", "unit-testing"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
