[package]
name = "near-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "=5.6.0", features = ["legacy"] }
borsh = "1"
hex = "0.4"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
near-sdk = { version = "=5.6.0", features = ["legacy", "unit-testing"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[workspace]
members = [".", "agent-msig", "minimal-test", "tests/integration/ft-mock", "tests/integration"]
