[workspace]

[package]
name = "escrow-verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "escrow-verifier"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = "2"
hex = "0.4"
nostr-sdk = "0.37"
near-jsonrpc-client = "0.15"
near-jsonrpc-primitives = "0.25"
near-primitives = "0.25"
near-crypto = "0.25"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "0.8"
